--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./index.js"
   },
   "dependencies": {
-    "express": "~4.16.0",
     "firebase-admin": "^6.1.0",
     "rss-parser": "^3.5.2"
   }
